Fake backend server

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "./node_modules/.bin/ts-node -P ./server.tsconfig.json ./server.ts"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
