--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "execute": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
