--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@angular/cli": "~7.0.2",
-    "@angular/compiler-cli": "~7.0.0",
     "@angular/common": "^7.0.1",
     "@angular/compiler": "^7.0.1",
+    "@angular/compiler-cli": "~7.0.0",
     "@angular/core": "^7.0.1",
     "@angular/forms": "^7.0.1",
     "@angular/platform-browser": "^7.0.1",
@@ -14,9 +14,8 @@
     "@angular/router": "^7.0.1",
     "core-js": "^2.5.7",
     "rxjs": "^6.3.3",
-    "zone.js": "^0.8.26",
     "typescript": "~3.1.1",
-    "json-server": "^0.14.2"
+    "zone.js": "^0.8.26"
   },
   "scripts": {
     "ng": "ng",
